<resources>
    <string name="app_name">MyStoryApp</string>
    <string name="invalid_email">"Email format is invalid!"</string>
    <string name="invalid_password">"Password must be at least 8 character! "</string>
    <string name="hint_name">Input Your Name</string>
    <string name="hint_email">Input Your Email</string>
    <string name="hint_password">Input Your Password</string>
    <string name="have_account">Already have account ?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="input_message">Input Your %1$s</string>
    <string name="txt_to_reg">Don\'t have account ?</string>
    <string name="login_error">Login error please try again</string>
    <string name="register_error">Register error please try again</string>
    <string name="logout">Logout</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="hint_desc">Input Your Description</string>
    <string name="upload">Upload</string>
    <string name="no_image">There\'s no image attached</string>
    <string name="label_add_activity">Add Story</string>
    <string name="label_detail_activity">Detail Story</string>
    <string name="register_success">Successfully create account</string>
    <string name="select_image">Select a Picture</string>
    <string name="permissions_ungranted">Permissions not granted</string>
    <string name="language">Language</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="map_style_failed">Style parsing failed.</string>
    <string name="map_style_not_found">\"Can\'t find style. Error: \"</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown Error Occured</string>
</resources>