<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_place_holder_24" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/camera"
            app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
            app:layout_constraintStart_toStartOf="@+id/preview_image"
            app:layout_constraintTop_toBottomOf="@+id/preview_image" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/gallery"
            app:layout_constraintEnd_toEndOf="@+id/preview_image"
            app:layout_constraintStart_toEndOf="@+id/btn_camera"
            app:layout_constraintTop_toBottomOf="@+id/preview_image" />

        <TextView
            android:id="@+id/tv_addDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_gallery"
            app:layout_constraintStart_toStartOf="@+id/btn_camera"
            app:layout_constraintTop_toBottomOf="@+id/btn_camera" />

        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_desc"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="@+id/btn_gallery"
            app:layout_constraintStart_toStartOf="@+id/btn_camera"
            app:layout_constraintTop_toBottomOf="@+id/tv_addDesc" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="332dp"
            android:text="@string/upload"
            app:layout_constraintTop_toBottomOf="@id/ed_add_description"
            app:layout_constraintEnd_toEndOf="@+id/ed_add_description"
            app:layout_constraintStart_toStartOf="@+id/ed_add_description"
            tools:layout_editor_absoluteX="242dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>